# hd_cam

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
scripts/: acquire.py
src/: acquire-ros.cpp  acquire.cpp  calib-acquire.cpp  grab-single.cpp
